--- a/Pages/Projects/Backoffice.cshtml
+++ b/Pages/Projects/Backoffice.cshtml
@@ -370,7 +370,7 @@
 </div>
 @* Modal Bootstrap *@
 <div class="modal fade" id="achievementModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <div>
